# librarian_bot

./: .gitignore  .sops.yaml  README.md  flake.nix  main.py  pyproject.toml  secrets.yaml
src/: bot_types.py  main.py  nav_commands.py  utils.py
